--- a/src/styles/components/header.module.css
+++ b/src/styles/components/header.module.css
@@ -6,6 +6,11 @@
     padding: 1rem;
     font-size: 1rem;
 
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
     transition: background-color  100ms linear;
     transition: color  100ms linear;
 }
@@ -54,10 +59,6 @@
     color: var(--white);
 }
 
-.dropDownbtn:hover {
-    background-color: var(--main-blue);
-    color: var(--white);
-}
 
 .dropDownContent {
     display: none;
@@ -65,12 +66,14 @@
 
     text-align: center;
 
+    margin-top: 0.1rem;
+
     border-bottom: 2.5px solid #cccaca ;
-    background-color: white;
-    min-width: 125%;
+    background-color: #f5f5f5;
+    min-width: 100%;
     right: 0;
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-    z-index: 1;
+    box-shadow: 0 8px 18px 0 rgba(0, 0, 0, 0.2);
+    z-index: 5;
 }
 
 .dropDownContent a {
